# The-side-of-the-source

./: .gitconfig  .gitignore  AVISO-Raro-Riesgo.md  LVM.md  README.md  Vagrantfile  bookmark.html  burbuja.cpp  copia_bookm.html  curse_exec.c  curses_win_colaider.c  do_rm.sh  function_factores_primos.c  git_rsa.pub  hash.rb  iterador.rb  matrices4.rb  memory.md  notas.txt  offLined-repo.md  pato_lucas.rb  proyeccion.md  prueba.html  teodoro.cpp  test.txt  test99  test_fibonacci.rb
Admin_aps/: black-my-list  tgkill  tgkill.c
C/: addrP  cscope.out  custom_compiler.sh  function_factores_primos.c  my_hud.c  path_to_my_login_path.c
Codigo/C/Gtk/Application5/: Makefile.am  myStyle  myStyle.gresources.xml  window.ui
Configur/: .Xdefaults  .bash_profile  .qemu_notas.swp  .tmux.conf  .vimrc  .xinitrc  bookmark.html  bookmarks-2016-07-19.json  bookmarks-2016-08-06.json  bookmarks-2016-08-14.json  bookmarks-2016-08-20.json  bookmarks-2016-08-26.json  bookmarks-2016-08-28.json  bookmarks.html  cleanap.sh  logs_monitor.sh  qemu_notas  settings.ini  xdot_notas.md
Curses/: README.md  curses_fdraw.c  curses_fselect.c  curses_head.h  curses_log.c  ir_tseracto  tags
Data/: binfmt_misc.ko.xz
Documentacion/: .qemu_notas.md.swo  .qemu_notas.md.swp  Certificados.md  INDICE.md  LinuxProgramming.md  Lvm-backup.md  Lvm-consideraciones.md  Lvm-restore-backup.md  Lvm.md  MiTm.md  XUL.md  carta.md  celebres.md  compCA.md  contenido-inapropiado.blog  fhaking_object.txt  hd.md  linuxPrograming.epub  notas_admin.md  notas_kernel.md  plantilla-canvas.md  qemu_notas  qemu_notas.md  refTPi.md  (+3 more)
(+3510 files in other folders)
